Commit on github Pages

--- a/terzo.html
+++ b/terzo.html
@@ -29,16 +29,6 @@
 		</div>
 	</body>
 	
-<p>Hi there!<br/>
-Se stavi cercando un sito a casaccio, in fondo poteva andarti <a href="http://www.inflatablechurch.com/">molto peggio</a>.<br/>
-Se invece cercavi qualche post su computer, programmazione, Linux e tecnologia in generale, poteva <a href="https://distrotube.com/">andarti meglio</a> ma non sei stato neanche troppo sfigato infondo.</p>
-
-<p>&#160;<br/>
-&#160;<br/>
-&#160;  </p>
-
-<h2 id="Posts%20list">Posts list</h2>
-
-<p><a href="https://www.mathison54.com/howitsmade_questo_sito">Come farsi un sito in Shell scripting (come questo)</a> </p>
+<p>dsfds</p>
 <footer style="margin-top: 3rem; margin-bottom: 1rem;">
 </footer>
